<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration"
    android:background="@drawable/gradient"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/CreateAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="35dp"
                android:text="@string/create_account"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:layout_marginStart="0dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="15dp"
                android:paddingLeft="0dp"
                android:text="@string/account_information"
                android:textColor="@android:color/white"
                android:paddingStart="0dp"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/textbox_border"
                android:ems="10"
                android:hint="@string/enter_email"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:inputType="textEmailAddress"
                android:paddingLeft="50dp"
                android:paddingTop="10dp"
                android:paddingRight="50dp"
                android:paddingBottom="15dp"
                android:autofillHints=""
                android:layout_marginStart="10dp"
                android:layout_marginEnd="25dp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/confirmPassword"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/textbox_border"
                android:ems="10"
                android:hint=" Enter Password..."
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:inputType="textPassword"
                android:paddingLeft="50dp"
                android:paddingTop="15dp"
                android:paddingRight="50dp"
                android:paddingBottom="15dp" />

            <EditText
                android:id="@+id/confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/textbox_border"
                android:ems="10"
                android:hint=" Confirm Password..."
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:inputType="textPassword"
                android:paddingLeft="50dp"
                android:paddingTop="15dp"
                android:paddingRight="50dp"
                android:paddingBottom="15dp" />

            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="26dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="20dp"
                android:paddingLeft="0dp"
                android:text="Personal Information"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/CreateAccount"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/textbox_border"
                android:ems="10"
                android:hint="@string/enter_name"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:inputType="text"
                android:paddingLeft="50dp"
                android:paddingTop="10dp"
                android:paddingRight="50dp"
                android:paddingBottom="15dp" />

            <EditText
                android:id="@+id/personalEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/textbox_border"
                android:ems="10"
                android:hint="@string/enter_email"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:inputType="text"
                android:paddingLeft="50dp"
                android:paddingTop="15dp"
                android:paddingRight="50dp"
                android:paddingBottom="15dp" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/textbox_border"
                android:ems="10"
                android:hint="@string/enter_phone"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:inputType="phone"
                android:paddingLeft="50dp"
                android:paddingTop="15dp"
                android:paddingRight="50dp"
                android:paddingBottom="15dp" />

            <Button
                android:id="@+id/createAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="60dp"
                android:layout_marginBottom="26dp"
                android:onClick="onClick"
                android:text="@string/create_my_account"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textColorLink="@color/colorPrimaryDark"
                android:background="@drawable/textbox_border"
                />

        </LinearLayout>

    </ScrollView>

</LinearLayout>